added supervisor to resume and edit css for job titles

--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -22,3 +22,10 @@ ul.normal {
 .link:hover { 
     background-color: #BA55D3;
 }
+
+.title {
+	font-size: 1.25em;
+	margin: 0 auto;
+	text-align: center;
+	font-weight: 400;
+}
